--- a/index.html
+++ b/index.html
@@ -4,7 +4,33 @@
     <title> Test </title>
   </head>
   <body>
-      Hello World!
+      <h1>Employees</h1> 
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+          <th>Address</th>
+          <th>Phone Number</th>
+        </tr>
+        <tr>
+          <td>Sithu</td>
+          <td>30</td>
+          <td>Tarmwe</td>
+          <td>09403845637</td>
+        </tr>
+        <tr>
+          <td>Mala</td>
+          <td>28</td>
+          <td>Sanchaung</td>
+          <td>094038434637</td>
+        </tr>
+        <tr>
+          <td>Thandar</td>
+          <td>22</td>
+          <td>Sule</td>
+          <td>094038437365</td>
+        </tr>
+      </table>
   </body>
 
 </html>
