Table with Style

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title> Test </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
       <h1>Employees</h1> 
-      <table>
+      <table id="t01">
         <tr>
           <th>Name</th>
           <th>Age</th>
